--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
-    <style>
-        .add-transaction-wrapper {
-            position: fixed;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(100% - 20px);
-            max-width: 50rem;
-        }
-
-        .add-transaction {
-            width: 100%;
-            padding: 1rem;
-
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -53,10 +38,10 @@
         <div class="offcanvas-body small d-flex justify-content-center">
             <div class="w-100" style="max-width: 50rem;">
                 <form>
-                    <!-- value -->
+                    <!-- amount -->
                     <div class="mb-3">
-                        <label for="transactionValue" class="form-label">Value</label>
-                        <input type="number" class="form-control" id="transactionValue" placeholder="0.00">
+                        <label for="transactionAmount" class="form-label">Amount (₱)</label>
+                        <input type="number" class="form-control" id="transactionAmount" placeholder="0.00">
                     </div>
 
                     <!-- description -->
@@ -93,8 +78,8 @@
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">VALUE (₱)</th>
-                        <th scope="col">DESC</th>
+                        <th scope="col">AMOUNT (₱)</th>
+                        <th scope="col">DESCRIPTION</th>
                         <th scope="col">DATE</th>
                     </tr>
                 </thead>
@@ -105,7 +90,7 @@
                 <tfoot class="table-dark">
                     <tr>
                         <th scope="row">Total</th>
-                        <td id="totalValue">₱ 0.00</td>
+                        <td id="totalAmount">₱ 0.00</td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -114,144 +99,7 @@
         </div>
     </div>
 
-    <script>
-        lucide.createIcons();
-
-        offcanvasBottomAddTransaction = document.getElementById('offcanvasBottomAddTransaction');
-        const tableBody = document.querySelector('#transactionTable tbody');
-        const totalValueCell = document.getElementById('totalValue');
-
-        const addTransactionBtn = document.getElementById('addTransactionBtn');
-        const valueInput = document.getElementById('transactionValue');
-        const descriptionInput = document.getElementById('transactionDescription');
-        const dateInput = document.getElementById('transactionDate');
-
-        // initialize date today
-        const today = new Date().toISOString().split('T')[0];
-        valueInput.value = 0.00;
-        descriptionInput.value = '';
-        dateInput.value = today;
-
-        const ctx = document.getElementById('chart').getContext('2d');
-        let chart;
-
-        function generateRandomData(length, min, max) {
-            const data = [];
-            for (let i = 0; i < length; i++) {
-                data.push((Math.random() * (max - min) + min).toFixed(2));
-            }
-            return data;
-        }
-
-        function addTransaction(id, value, description, date) {
-            const type = parseFloat(value) < 0 ? 'danger' : 'success';
-            const row = `
-                <tr class="table-${type}">
-                    <td>${id}</td>
-                    <td>${parseFloat(value).toFixed(2)}</td>
-                    <td>${description}</td>
-                    <td>${date}</td>
-                </tr>
-            `;
-            tableBody.insertAdjacentHTML('beforeend', row);
-            updateTotal();
-
-            const val = parseFloat(value);
-            const expense = val < 0 ? val : 0;
-            const earning = val >= 0 ? val : 0;
-
-            chart.data.labels.push(id);
-            chart.data.datasets[0].data.push(expense);
-            chart.data.datasets[1].data.push(earning);
-            chart.update();
-        }
-
-        function createChart() {
-            chart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: [],
-                    datasets: [
-                        {
-                            label: 'Expenses',
-                            data: [],
-                            borderColor: 'red',
-                            backgroundColor: 'rgba(255, 0, 0, 0.2)',
-                            pointBackgroundColor: 'red',
-                            borderWidth: 1
-                        },
-                        {
-                            label: 'Earnings',
-                            data: [],
-                            borderColor: 'green',
-                            backgroundColor: 'rgba(60, 179, 113, 0.2)',
-                            pointBackgroundColor: 'green',
-                            borderWidth: 1
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        tooltip: {
-                            intersect: false,
-                        },
-                    },
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            title: {
-                                display: true,
-                                text: 'Amount (₱)'
-                            }
-                        },
-                        x: {
-                            title: {
-                                display: true,
-                                text: `Transaction #`
-                            }
-                        }
-                    }
-                }
-            });
-        }
-
-        function updateTotal() {
-            let total = 0;
-            tableBody.querySelectorAll('tr').forEach(row => {
-                const valueCell = row.cells[1];
-                const value = parseFloat(valueCell.textContent);
-                total += value;
-            });
-            totalValueCell.textContent = `₱ ${total.toFixed(2)}`;
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            createChart();
-
-            addTransactionBtn.addEventListener('click', (e) => {
-                e.preventDefault();
-
-                const value = valueInput.value;
-                const description = descriptionInput.value;
-                const date = dateInput.value;
-
-                if (!value || isNaN(value) || value.trim() === '') {
-                    return alert('Transaction value is required and must be a number.');
-                }
-
-                const id = tableBody.children.length + 1;
-                addTransaction(id, value, description, date);
-
-                valueInput.value = 0.00;
-                descriptionInput.value = '';
-                dateInput.value = today;
-
-                const offcanvas = bootstrap.Offcanvas.getInstance(offcanvasBottomAddTransaction);
-                offcanvas.hide();
-            });
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
