fix: remove inline style for transaction table to improve responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                 <canvas id="chart"></canvas>
             </div>
 
-            <table class="table table-hover table-sm small mt-2" id="transactionTable" style="white-space: nowrap;">
+            <table class="table table-hover table-sm small mt-2" id="transactionTable">
                 <caption>Rip to my wallet</caption>
                 <thead class="table-dark">
                     <tr>
