fix: update transaction table structure and formatting for total amount display

--- a/public/index.html
+++ b/public/index.html
@@ -96,17 +96,17 @@
                     </tr>
                 </thead>
 
-                <tbody class="table-secondary">
+                <tbody>
+
+                </tbody>
+
+                <tfoot class="table-dark">
                     <tr>
                         <th scope="row">Total</th>
-                        <td id="totalAmount">0.00</td>
+                        <td id="totalAmount">₱ 0.00</td>
                         <td></td>
                         <td></td>
                     </tr>
-                </tbody>
-
-                <tfoot>
-
                 </tfoot>
             </table>
         </div>
