--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,7 @@
         <div class="d-flex mb-3" style="justify-content: space-between;">
             <!-- left -->
             <div class="d-flex align-items-center justify-content-start">
-                <button class="btn" id="resetViewBtn" title="Reset View"
-                    style="height: calc(2.5rem + 1px); outline: 1px solid #DEE2E6;">
+                <button class="btn" id="resetViewBtn" title="Reset View" style="height: calc(2.5rem + 1px); outline: 1px solid #DEE2E6;">
                     Reset zoom
                 </button>
             </div>
