--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
     </div>
 
 
-    <div class="mt-5 mb-5" style="max-width: 50rem; margin: auto; padding: 10px;">
+    <div class="mt-5 mb-5" style="max-width: 50rem; margin: auto; width: calc(100% - 20px);">
         <div class="d-flex mb-3" style="justify-content: space-between;">
             <!-- left -->
             <div class="d-flex align-items-center justify-content-start">
